--- a/src/styles/Talk.css
+++ b/src/styles/Talk.css
@@ -1,18 +1,31 @@
 .talk-container{
     display: flex;
-    height:162px;
+    height:158px;
     border: 1px solid #000;
+    border-top: none;
     margin-left:0px;
     margin-right: auto;
 }
 
+.talk-information-container{
+    margin-left: 10px;
+}
+
 .time-container {
     width: 210px;
-    height: fill;
+    height: stretch;
     border-right: 1px solid #000;
 }
 
 .time-container h3 {
     text-align: center;
-    padding: 70px 0;
+    padding: 50px 0;
+}
+
+.talk-description-preview{
+    overflow: hidden;
+    width: 170ch;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
