--- a/src/styles/WhatsOn.css
+++ b/src/styles/WhatsOn.css
@@ -9,9 +9,9 @@
     overflow: hidden;
     flex-direction: column; 
     align-items: flex-start;
-    height: 84vh;
+    height: auto;
     border: 1px solid #000;
-    width: 88px
+    width: 130px
 }
 
 .Session-buttons{
@@ -27,7 +27,9 @@
 }
 
 .Session-padding.top{
+    display: block ;
     height: 80px;
+    width: 130px;
 }
 
 .Session-padding.bottom{
@@ -36,8 +38,8 @@
 }
 
 .sessionlinks {
-    height: 40px;
-    width: 88px;
+    height: 55px;
+    width: 130px;
     background-color: #d6d6d6;
     border: 2px solid #000000;
     cursor: pointer;
@@ -49,6 +51,5 @@
 }
 
 .sessionlinks.active {
-    background-color: #ffffff;
-    border-bottom: 1px solid #ffffff;
+    background-color: #616161;
 }
