--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -79,6 +79,33 @@ label {
     box-sizing: border-box;
 }
 
+
+
+.name-fields-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem; /* Space between checkbox and label */
+    margin-bottom: 15px;
+    margin-left:auto;
+    margin-right:auto;
+    width: 43%;
+}
+
+.name-input-container{
+    display:block;
+}
+
+.input.name{
+    margin-bottom: 15px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 220px;
+    box-sizing: border-box;
+}
+
 .input.text.area{
     resize: vertical;
     overflow: auto;
@@ -94,4 +121,10 @@ label {
     cursor: pointer;
     font-size: 16px;
     width: 100%;
+}
+ 
+.popup-open-text {
+    cursor:pointer;
+     color:blue;
+     text-decoration:underline;
 }
