Introduced Account API Endpoint, and Included Register Functionality

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -20,6 +20,10 @@
     border-bottom: 2px solid #000000
 }
 
+.account-info{
+    display: flex;
+    align-items: center;   
+}
 
 button {
     height: 38px;
