--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -99,3 +99,14 @@
 .account-info.padding{
     width:200px;
 }
+
+.account-settings-button-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10px;
+}
+
+.account-settings-button-container button{
+    margin-bottom: 10px;
+}
