--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -128,3 +128,18 @@ label {
      color:blue;
      text-decoration:underline;
 }
+
+.detailed-button-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10px;
+}
+
+.description-button-container{
+    display:flex
+}
+
+.user-rating-container {
+    margin-top:10px;
+}
